<resources>
    <string name="app_name">Lift Scout</string>
    <string name="app_developer">Brandon Hogan</string>
    <string name="app_developer_website">http://www.brandonhogan.com</string>
    <string name="app_designer">Ben Venema</string>
    <string name="app_designer_website">http://www.benvenema.com</string>
    <string name="app_feedback">liftscout@gmail.com</string>
    <string name="app_feedback_subject">Lift Scout - App Feedback</string>
    <string name="app_description">Lift Scout is an app designed to make your time in the gym easier to track your progress and keep you motivated. By tracking your workouts, you are able to visually see your growth</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
...
    <string name="nav_today">Today</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_routines">Routines</string>
    <string name="nav_exercises">Exercises</string>
    <string name="nav_graphs">Graphs</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_realm">Realm Output</string>

    <!-- Titles -->
    <string name="title_activity_init">Lift Scout Setup</string>
    <string name="title_frag_settings">Settings</string>
    <string name="title_frag_about">About</string>
...
